# ulco-gl1-etudiant

./: .gitignore  README.md
projets/caesar/: .gitignore  CMakeLists.txt  default.nix  input.txt
projets/caesar/src/: main.cpp
projets/caesar/test/: ut.cpp
projets/cshell/: CMakeLists.txt  Doxyfile  default.nix
projets/cshell/app/: main.cpp
projets/cshell/data/: cat1.txt  cat2.txt
projets/cshell/include/cshell/: cat.hpp  cshell.hpp
projets/cshell/src/cshell/: cat.cpp
projets/cshell/test/cshell/: cat-test.cpp
projets/csvstats/: CMakeLists.txt  README.md  default.nix
projets/csvstats/app/: main.cpp
projets/csvstats/data/: fail1.csv  test2.csv  test3.csv  test4.csv
projets/csvstats/doc/: Doxyfile
projets/csvstats/include/: mainpage.hpp
projets/csvstats/include/csvstats/: csvstats.hpp
projets/csvstats/src/csvstats/: csvstats.cpp
projets/csvstats/test/csvstats/: csvstats-test.cpp
projets/guess/: CMakeLists.txt  README.md  default.nix
projets/guess/doc/: Doxyfile
projets/guess/src/: main.cpp
projets/hashell/: README.md  hashell.cabal
projets/hashell/app/: Main.hs
projets/hashell/src/: Cat.hs
projets/hashell/test/: CatSpec.hs
tp-compilation/badFibo/: CMakeLists.txt
tp-compilation/badFibo/src/: Myvect.cpp  badFibo.cpp
tp-compilation/hello/: hello.cpp  main.cpp
tp-compilation/hello-gtk/: Makefile  default.nix
tp-compilation/imshow/: Makefile  default.nix
tp-compilation/mymaths/: CMakeLists.txt  default.nix
tp-compilation/mymaths/src/app1/: main.cpp
tp-compilation/mymaths/src/app2/: main.cpp
tp-compilation/mymaths/src/mymaths/: mymaths.cpp
tp-compilation/people/: default.nix  fccp.nix  people.cpp  people.csv
tp-compilation/play-videos/: CMakeLists.txt  default.nix
tp-compilation/play-videos/src/: play-videos.cpp
tp-compilation/progs/: prog1.cpp
tp-compilation/webserver/: CMakeLists.txt  default.nix  main.cpp
tp-documentation/drunk_player/: .gitignore  CMakeLists.txt  README.md  default.nix
tp-documentation/drunk_player/doc/: Doxyfile
tp-documentation/drunk_player/src/: mainpage.hpp
tp-documentation/drunk_player/src/drunk_player/: Filesystem.cpp  Player.cpp  Player.hpp
tp-documentation/drunk_player/src/drunk_player_cli/: drunk_player_cli.cpp
tp-documentation/editeur1/: Makefile  app1.cpp  module1.cpp
tp-documentation/hello-gtk/: CMakeLists.txt  default.nix  hello-gtk.cpp
tp-documentation/imshow/: CMakeLists.txt  default.nix
tp-documentation/mydoc-md/: LICENSE.txt
tp-erreurs/errno/: Makefile  main.cpp
tp-erreurs/fibo/: CMakeLists.txt
tp-erreurs/fibo/src/: Fibo.cpp  Fibo.hpp  print_fibo.cpp
tp-erreurs/replicate42/: CMakeLists.txt  Makefile  default.nix  main.cpp  replicate42a.cpp  replicate42b.cpp
tp-erreurs/reverselines/: CMakeLists.txt  README.md  default.nix  main.cpp
tp-erreurs/selectfile/: CMakeLists.txt  README.md  default.nix
tp-erreurs/selectfile/src/: MyWindow.cpp  MyWindow.hpp  selectfile.cpp
tp-git/: changeCasse.cpp  people.cpp
tp-tests/fibo/: CMakeLists.txt  default.nix
tp-tests/fibo/src/: Fibo-test.cpp  Fibo.cpp  Fibo.hpp  main.cpp
tp-tests/find3/: CMakeLists.txt  default.nix
tp-tests/find3/src/: Game.cpp  Game.hpp  main.cpp
tp-tests/find3/test/: main.cpp
tp-tests/myclass/: CMakeLists.txt  default.nix
tp-tests/myclass/src/: MyClass-test.cpp  MyClass.cpp  MyClass.hpp
tp-tests/mymaths/: CMakeLists.txt  default.nix
tp-tests/mymaths/include/mymaths/: add.hpp  mul.hpp  mymaths.hpp
tp-tests/mymaths/src/app/: main.cpp
tp-tests/mymaths/src/mymaths/: add.cpp  mul.cpp
tp-tests/mymock/: CMakeLists.txt  default.nix
tp-tests/mymock/src/: Order.hpp  Store.hpp
tp-tests/mymock/test/: Order-test.cpp
tp-tests/pbt/: CMakeLists.txt  default.nix  main.cpp
tp-tests/poivrot-detector/: CMakeLists.txt  default.nix  placard1.txt  placard2.txt
tp-tests/poivrot-detector/src/: Bottle.cpp  Bottle.hpp  main.cpp
tp-tests/poivrot-detector/test/: Bottle-test.cpp
tp-tests/tictactoe/: CMakeLists.txt  default.nix
tp-tests/tictactoe/src/: Game.hpp  Ui.cpp  Ui.hpp
tp-unix/: fibo.cpp
